--- a/.forestry/front_matter/templates/action.yml
+++ b/.forestry/front_matter/templates/action.yml
@@ -13,7 +13,9 @@ fields:
     name: is_primary
     label: Is Primary
     description: Gives the button a primary color scheme
+    default: false
   - type: boolean
     name: is_scrolly
     label: Is Scrolly
     description: Gives the button a scrolly animation (if a section ID is used in the URL)
+    default: false
