--- a/.forestry/front_matter/templates/config.yml
+++ b/.forestry/front_matter/templates/config.yml
@@ -56,6 +56,7 @@ fields:
             name: is_primary
             label: Is Primary
             description: gives button a primary color scheme
+            default: false
   - type: field_group
     name: footer
     label: Footer Configuration
