--- a/.forestry/front_matter/templates/post.yml
+++ b/.forestry/front_matter/templates/post.yml
@@ -39,12 +39,16 @@ fields:
   - type: datetime
     name: date
     label: Date
+    config:
+      required: true
   - type: boolean
     name: show_in_footer_news
     label: Show Post In Footer News
+    default: false
   - type: boolean
     name: show_in_sidebar
     label: Show Post In Page Sidebars
+    default: false
 pages:
   - _posts/2015-03-15-post01.md
   - _posts/2015-03-24-post02.md
