--- a/.forestry/front_matter/templates/post.yml
+++ b/.forestry/front_matter/templates/post.yml
@@ -39,6 +39,8 @@ fields:
   - type: datetime
     name: date
     label: Date
+    config:
+      required: true
   - type: boolean
     name: show_in_footer_news
     label: Show Post In Footer News
