--- a/.forestry/front_matter/templates/page.yml
+++ b/.forestry/front_matter/templates/page.yml
@@ -29,8 +29,8 @@ fields:
         - left
         - right
   - type: text
-    name: template
-    label: Template
+    name: layout
+    label: Layout
     hidden: true
     default: page
     config:
